# flaskmvc1

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: auth.py  database.py  main.py  settings.py
app/models/: user.py
app/repositories/: user.py
app/routers/: __init__.py  app.py  auth.py  index.py
app/schemas/: user.py
app/templates/: 401.html  app.html  authenticated-base.html  base.html  login.html  signup.html
app/utilities/: flash.py  pagination.py
